inou/prp/tests/errors/import_not_literal.prp
/*
:name: import_not_literal
:type: error
:error: comptime string literal
:help: computed string
*/

// Task 1m — the `import` argument must be a comptime string literal:
// imports resolve statically (the LiveHD docs §1).

const name = "file1"
const b = import(name)  // locate_error_here
